codex-rs/core/tests/suite/snapshots/all__suite__skills_extension__cloud_skills_across_executor_readiness_windows.snap
---
source: core/tests/suite/skills_extension.rs
expression: "context_snapshot::format_request_history_snapshot(\"Cloud skills rebalance once to retain every executor skill. Post-turn compaction and resume restore the same cloud allocation before the executor reconnects; both catalogs are fully reinjected once into the new history.\",\n&requests,\n&ContextSnapshotOptions::default().rewrite_known_segments().include_request_settings(),)"
---
Scenario: Cloud skills rebalance once to retain every executor skill. Post-turn compaction and resume restore the same cloud allocation before the executor reconnects; both catalogs are fully reinjected once into the new history.

## Window 1
Settings:
  include: ["reasoning.encrypted_content"]
  instructions: <MODEL_INSTRUCTIONS>
  model: "gpt-5.5"
  parallel_tool_calls: true
  prompt_cache_key: "<PROMPT_CACHE_KEY 1>"
  reasoning: {"effort":"medium"}
  store: false
  stream: true
  text: {"verbosity":"low"}
  tool_choice: "auto"
  tools (10; hash=f6dde4933a9e48d5):
    - function/exec_command: Runs a command in a PTY, returning output or a session ID for ongoing interaction.; args=[cmd, justification, login, max_output_tokens, prefix_rule, sandbox_permissions, shell, tty, workdir, yield_time_ms]; hash=c04108e51a8548c5
    - function/write_stdin: Writes characters to an existing unified exec session and returns recent output.; args=[chars, max_output_tokens, session_id, yield_time_ms]; hash=7fb62d8a3e2df4e2
    - function/recall: Return closed compaction intervals from the current thread as a chronological JSON list of interv...; args=[intervals]; hash=d4891e491102d14c
    - function/wait_for_environment: Wait for the selected environment.; args=[environment_id]; hash=aac8552da86b3b20
    - function/request_user_input: Request user input for one to three short questions and wait for the response. This tool is only ...; args=[questions]; hash=64a729b25c424fc6
    - custom/apply_patch: The `apply_patch` tool can be used to edit files. Each file path may appear in only one patch ope...; hash=a7af004fdc64b8d6
    - function/view_image: View a local image file from the filesystem when visual inspection is needed. Use this for images...; args=[detail, path]; hash=3b766d5bdec5d50e
    - namespace/skills: Tools in the skills namespace.; hash=998a720eb0f017bc
      - function/list
      - function/read
    - tool_search: # Tool discovery  Searches over deferred tool metadata with BM25 and exposes matching tools for t...; args=[limit, query]; hash=400cd6ac61d524a9
    - web_search; hash=f103e327c6870a46
-- request 1 (turn) --
00:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <environments_instructions>
        ## Execution environments
        Execution environments are separate machines or workspaces with their own files, shell, and installed ca...text>` lists the environments selected for this task. [hash=bc910d398b9b4d83]

        An environment marked `starting` is not yet usable. Its files, commands, AGENTS.md instructions, skills,...CP tools may become available when startup completes. [hash=42a360e5075e8edb]

        Wait only when the current task needs that environment. Continue using tools that are already available for unrelated work.
        </environments_instructions>
    [03] <SKILLS_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    Inspect the available skills.

## Window 2 (after request 1)
Settings: relative to window 1
  tools (10; hash=f6dde4933a9e48d5):
    ~ function/exec_command: Runs a command in a PTY, returning output or a session ID for ongoing interaction.; args=[cmd, justification, login, max_output_tokens, prefix_rule, sandbox_permissions, shell, tty, workdir, yield_time_ms]; hash=c04108e51a8548c5
-- request 2 (turn) --
00:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <environments_instructions>
        ## Execution environments
        Execution environments are separate machines or workspaces with their own files, shell, and installed ca...text>` lists the environments selected for this task. [hash=bc910d398b9b4d83]

        An environment marked `starting` is not yet usable. Its files, commands, AGENTS.md instructions, skills,...CP tools may become available when startup completes. [hash=42a360e5075e8edb]

        Wait only when the current task needs that environment. Continue using tools that are already available for unrelated work.
        </environments_instructions>
    [03] <SKILLS_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    Inspect the available skills.
03:function_call/wait_for_environment:{"environment_id":"skills-executor"}
04:function_call_output:{"environment_id":"skills-executor","status":"ready"}
05:message/user:
    <ENVIRONMENT_CONTEXT>
06:message/developer[2]:
    [01] <SKILLS_INSTRUCTIONS>
    [02] <SKILLS_INSTRUCTIONS>
-- request 3 (turn) --
07:message/user:
    Inspect the available skills again.

## Window 3 (after request 3)
Settings: relative to window 2
  parallel_tool_calls: false
  tools (0; hash=09612b07b5ecb5a5):
    - removed function/exec_command
    - removed function/write_stdin
    - removed function/recall
    - removed function/wait_for_environment
    - removed function/request_user_input
    - removed custom/apply_patch
    - removed function/view_image
    - removed namespace/skills
    - removed tool_search
    - removed web_search
-- request 4 (compaction) --
00:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <environments_instructions>
        ## Execution environments
        Execution environments are separate machines or workspaces with their own files, shell, and installed ca...text>` lists the environments selected for this task. [hash=bc910d398b9b4d83]

        An environment marked `starting` is not yet usable. Its files, commands, AGENTS.md instructions, skills,...CP tools may become available when startup completes. [hash=42a360e5075e8edb]

        Wait only when the current task needs that environment. Continue using tools that are already available for unrelated work.
        </environments_instructions>
    [03] <SKILLS_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    Inspect the available skills.
03:function_call/wait_for_environment:{"environment_id":"skills-executor"}
04:function_call_output:{"environment_id":"skills-executor","status":"ready"}
05:message/user:
    <ENVIRONMENT_CONTEXT>
06:message/developer[2]:
    [01] <SKILLS_INSTRUCTIONS>
    [02] <SKILLS_INSTRUCTIONS>
07:message/user:
    Inspect the available skills again.
08:message/user:
    <SUMMARIZATION_PROMPT>

## Window 4 (after request 4: input diverged at item 00)
Settings: same as window 1
-- request 5 (turn) --
00:message/user:
    Inspect the available skills.
01:message/user:
    Inspect the available skills again.
02:message/user:
    <COMPACTION_SUMMARY>
    The available skills were inspected.
03:message/developer:
    <POST_COMPACT_RECOVERY>
04:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <environments_instructions>
        ## Execution environments
        Execution environments are separate machines or workspaces with their own files, shell, and installed ca...text>` lists the environments selected for this task. [hash=bc910d398b9b4d83]

        An environment marked `starting` is not yet usable. Its files, commands, AGENTS.md instructions, skills,...CP tools may become available when startup completes. [hash=42a360e5075e8edb]

        Wait only when the current task needs that environment. Continue using tools that are already available for unrelated work.
        </environments_instructions>
    [03] <SKILLS_INSTRUCTIONS>
05:message/user:
    <ENVIRONMENT_CONTEXT>
06:message/user:
    Inspect the skills after resuming.

## Window 5 (after request 5: input diverged at item 03)
Settings: same as window 2
-- request 6 (turn) --
00:message/user:
    Inspect the available skills.
01:message/user:
    Inspect the available skills again.
02:message/user:
    <COMPACTION_SUMMARY>
    The available skills were inspected.
03:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <environments_instructions>
        ## Execution environments
        Execution environments are separate machines or workspaces with their own files, shell, and installed ca...text>` lists the environments selected for this task. [hash=bc910d398b9b4d83]

        An environment marked `starting` is not yet usable. Its files, commands, AGENTS.md instructions, skills,...CP tools may become available when startup completes. [hash=42a360e5075e8edb]

        Wait only when the current task needs that environment. Continue using tools that are already available for unrelated work.
        </environments_instructions>
    [03] <SKILLS_INSTRUCTIONS>
04:message/user:
    <ENVIRONMENT_CONTEXT>
05:message/user:
    Inspect the skills after resuming.
06:function_call/wait_for_environment:{"environment_id":"skills-executor"}
07:function_call_output:{"environment_id":"skills-executor","status":"ready"}
08:message/user:
    <ENVIRONMENT_CONTEXT>
09:message/developer:
    <SKILLS_INSTRUCTIONS>
